--- a/template.html
+++ b/template.html
@@ -5,31 +5,35 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
         <link rel="stylesheet" href="static/css/style.css">
+        <link rel="stylesheet" href="static/css/style-print.css" media="print">
+        <link rel="stylesheet" href="static/css/style-desk.css" media="screen and (min-width: 796px)">
+        <link rel="stylesheet" href="static/css/style-tab.css" media="screen and (min-width: 600px) and (max-width: 795px)">
+        <link rel="stylesheet" href="static/css/style-phone.css" media="screen and (max-width: 599px)">
         <title>Document</title>
     </head>
     <body>
         <nav>
             <ul class="nav nav-pills justify-content-center" id="myTabs" role="tablist" aria-orientation="horizontal">
                 <li class="nav-item">
-                    <a href="index.html" class="nav-link">Home</a>
+                    <a href="index.html" class="nav-link nav-active-custom">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a href="static/other/Justin Rose CV.pdf" class="nav-link">My CV</a>
+                    <a href="static/other/Justin Rose CV.pdf" class="nav-link nav-link-custom">My CV</a>
+                </li>
+                <li class="nav-item nav-link-custom">
+                    <a href="socials.html" class="nav-link nav-link-custom">Social Media</a>
                 </li>
                 <li class="nav-item">
-                    <a href="socials.html" class="nav-link">Social Media</a>
+                    <a href="about.html" class="nav-link nav-link-custom">About</a>
                 </li>
                 <li class="nav-item">
-                    <a href="about.html" class="nav-link">About</a>
+                    <a href="history.html" class="nav-link nav-link-custom">History</a>
                 </li>
                 <li class="nav-item">
-                    <a href="history.html" class="nav-link">History</a>
+                    <a href="hobbies.html" class="nav-link nav-link-custom">Hobbies</a>
                 </li>
                 <li class="nav-item">
-                    <a href="hobbies.html" class="nav-link">Hobbies</a>
-                </li>
-                <li class="nav-item">
-                    <a href="contact.html" class="nav-link">Contact</a>
+                    <a href="contact.html" class="nav-link nav-link-custom">Contact</a>
                 </li>
             </ul>
         </nav>
@@ -37,20 +41,18 @@
             <div class="container">
                 <div class="d-flex flex-column align-items-center justify-content-center">
                     <div class="col-md-4 justify-content-center text-center">
-                            <!-- img of self -->
+                            <img src="static/img/Justin-Rose-image.JPG" alt="Picture of Justin Rose in a button up shirt and tie" class="img-fluid rounded-circle mb-3">
                             <h1 class="h1">Justin Rose</h1>
                             <p class="h-quote">
-                                "Honesty Is The Best Policy" <br>~ <br>
+                                "Honesty Is The Best Policy" <br>~<br>
                             </p>
                             <p class="h-quote-author">
-                                
                                 Benjamin Franklin
                             </p>
                     </div>
                 </div>
             </div>
         </header>
-        
         <div id="main">
             <main>
                 <!-- Main Content -->
@@ -73,14 +75,11 @@
                                 <a href="emergency.html" class="nav-link px-2 text-body-secondary">Emergency Contact Info</a>
                             </li> 
                             <li class="nav-item">
-                                <a href="site-map.html" class="nav-link px-2 text-body-secondary">Site Map</a>
+                                <a href="static/other/site-map.pdf" class="nav-link px-2 text-body-secondary">Site Map</a>
                             </li>
                         </ul> 
                     </footer> 
                 </div>
-                <!-- Contact Info -->
-                <!-- E-Contact info -->
-                <!-- Link to site map -->
             </footer>
         </div>
         <script src="static/js/nav-oriet.js"></script>
