--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
         <nav>
             <ul class="nav nav-pills justify-content-center" id="myTabs" role="tablist" aria-orientation="horizontal">
                 <li class="nav-item">
-                    <a href="index.html" class="nav-link nav-active-custom">Home</a>
+                    <a href="index.html" class="nav-link nav-link-custom">Home</a>
                 </li>
                 <li class="nav-item">
                     <a href="static/other/Justin Rose CV.pdf" class="nav-link nav-link-custom">My CV</a>
@@ -33,7 +33,7 @@
                     <a href="hobbies.html" class="nav-link nav-link-custom">Hobbies</a>
                 </li>
                 <li class="nav-item">
-                    <a href="contact.html" class="nav-link nav-link-custom">Contact</a>
+                    <a href="contact.html" class="nav-link nav-active-custom">Contact</a>
                 </li>
             </ul>
         </nav>
@@ -55,7 +55,53 @@
         </header>
         <div id="main">
             <main>
-                <!-- Main Content -->
+                <div class="container-lg">
+                    <div class="row justify-content-center">
+                        <div class="col-md-6">
+                            <table class="table table-dark table-bordered table-hover">
+                                <thead>
+                                    <tr>
+                                        <th scope="col">
+                                            <h3>Contact</h3>
+                                        </th>
+                                        <th scope="col">
+                                            <h3>Relation</h3>
+                                        </th>
+                                        <th scope="col">
+                                            <h3>Phone Number</h3>
+                                        </th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr scope="row">
+                                        <td>
+                                            Jennifer Calhoun
+                                        </td>
+                                        <td>
+                                            Mother
+                                        </td>
+                                        <td>
+                                            <a href="tel:+18156514523" class="phone-link">(815)-651-8523</a>
+                                            <p class="phone-display">(815)-651-8523</p>
+                                        </td>
+                                    </tr>
+                                    <tr scope="row">
+                                        <td>
+                                            Eugene rose
+                                        </td>
+                                        <td>
+                                            Father
+                                        </td>
+                                        <td>
+                                            <a href="tel:+18156717961" class="phone-link">(815)-671-7961</a>
+                                            <p class="phone-display">(815)-671-7961</p>
+                                        </td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
             </main>
         </div>
         <div id="footer">
