--- a/emergency.html
+++ b/emergency.html
@@ -55,7 +55,13 @@
         </header>
         <div id="main">
             <main>
-                <!-- Main Content -->
+                <div class="container-lg">
+                    <div class="row justify-content-center">
+                        <div class="col-md-8">
+                            
+                        </div>
+                    </div>
+                </div>
             </main>
         </div>
         <div id="footer">
