--- a/socials.html
+++ b/socials.html
@@ -15,13 +15,13 @@
         <nav>
             <ul class="nav nav-pills justify-content-center" id="myTabs" role="tablist" aria-orientation="horizontal">
                 <li class="nav-item">
-                    <a href="index.html" class="nav-link nav-active-custom">Home</a>
+                    <a href="index.html" class="nav-link nav-link-custom">Home</a>
                 </li>
                 <li class="nav-item">
                     <a href="static/other/Justin Rose CV.pdf" class="nav-link nav-link-custom">My CV</a>
                 </li>
                 <li class="nav-item nav-link-custom">
-                    <a href="socials.html" class="nav-link nav-link-custom">Social Media</a>
+                    <a href="socials.html" class="nav-link nav-active-custom">Social Media</a>
                 </li>
                 <li class="nav-item">
                     <a href="about.html" class="nav-link nav-link-custom">About</a>
@@ -55,7 +55,74 @@
         </header>
         <div id="main">
             <main>
-                <!-- Main Content -->
+                <hr>
+                <div class="container-lg">
+                    <div class="row justify-content-center">
+                        <div class="col-md-4">
+                            <h1>Links To My Socials:</h1>
+                        </div>
+                    </div>
+                    <div class="row justify-content-center">
+                        <div class="col-md-7">
+                            <table class="table-dark table-bordered">
+                                <thead>
+                                    <tr>
+                                        <th scope="col">
+                                            <h2>Username</h2>
+                                        </th>
+                                        <th scope="col">
+                                            <h2>Platform</h2>
+                                        </th>
+                                        <th scope="col">
+                                            <h2>Link</h2>
+                                        </th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr scope="row">
+                                        <td>
+                                            <h3>@justin.rose</h3>
+                                        </td>
+                                        <td>
+                                            <h3>Facebook</h3>
+                                        </td>
+                                        <td>
+                                            <a href="https://www.facebook.com/justin.rose.690547">
+                                                <img src="static/img/facebook-logo.png" alt="facebook logo" class="img-fluid">
+                                            </a>
+                                        </td>
+                                    </tr>
+                                    <tr scope="row">
+                                        <td>
+                                            <h3>@monk-iatsu</h3>
+                                        </td>
+                                        <td>
+                                            <h3>Github</h3>
+                                        </td>
+                                        <td>
+                                            <a href="https://github.com/monk-iatsu">
+                                                <img src="static/img/github-logo.png" alt="github logo" class="img-fluid">
+                                            </a>
+                                        </td>
+                                    </tr>
+                                    <tr scope="row">
+                                        <td>
+                                            <h3>Justin Rose</h3>
+                                        </td>
+                                        <td>
+                                            <h3>Linkedin</h3>
+                                        </td>
+                                        <td>
+                                            <a href="https://www.linkedin.com/in/justin-rose-607370275/">
+                                                <img src="static/img/linkedin-logo.png" alt="linkedin logo" class="img-fluid">
+                                            </a>
+                                        </td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
             </main>
         </div>
         <div id="footer">
@@ -73,9 +140,6 @@
                             </li> 
                             <li class="nav-item">
                                 <a href="emergency.html" class="nav-link px-2 text-body-secondary">Emergency Contact Info</a>
-                            </li> 
-                            <li class="nav-item">
-                                <a href="static/other/site-map.pdf" class="nav-link px-2 text-body-secondary">Site Map</a>
                             </li>
                         </ul> 
                     </footer> 
