--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,8 @@
         <link rel="stylesheet" href="static/css/style-desk.css" media="screen and (min-width: 796px)">
         <link rel="stylesheet" href="static/css/style-tab.css" media="screen and (min-width: 600px) and (max-width: 795px)">
         <link rel="stylesheet" href="static/css/style-phone.css" media="screen and (max-width: 599px)">
-        <title>Document</title>
+        <link rel="shortcut icon" href="static/img/favicon.jpg" type="image/jpeg">
+        <title>Presenting Justin Rose | Contact</title>
     </head>
     <body>
         <nav>
@@ -42,11 +43,11 @@
                 <div class="d-flex flex-column align-items-center justify-content-center">
                     <div class="col-md-4 justify-content-center text-center">
                             <img src="static/img/Justin-Rose-image.JPG" alt="Picture of Justin Rose in a button up shirt and tie" class="img-fluid rounded-circle mb-3">
-                            <h1 class="h1">Justin Rose</h1>
-                            <p class="h-quote">
+                            <h1 class="h1 heading-text-color">Justin Rose</h1>
+                            <p class="h-quote regular-text-color">
                                 "Honesty Is The Best Policy" <br>~<br>
                             </p>
-                            <p class="h-quote-author">
+                            <p class="h-quote-author regular-text-color">
                                 Benjamin Franklin
                             </p>
                     </div>
@@ -62,13 +63,13 @@
                                 <thead>
                                     <tr>
                                         <th scope="col">
-                                            <h3>Contact</h3>
+                                            <h3 class="heading-text-color">Contact</h3>
                                         </th>
                                         <th scope="col">
-                                            <h3>Relation</h3>
+                                            <h3 class="heading-text-color">Relation</h3>
                                         </th>
                                         <th scope="col">
-                                            <h3>Phone Number</h3>
+                                            <h3 class="heading-text-color">Phone Number</h3>
                                         </th>
                                     </tr>
                                 </thead>
@@ -109,19 +110,19 @@
                 <svg xmlns="http://www.w3.org/2000/svg" class="d-none"> <symbol id="check2" viewBox="0 0 16 16"> <path d="M13.854 3.646a.5.5 0 0 1 0 .708l-7 7a.5.5 0 0 1-.708 0l-3.5-3.5a.5.5 0 1 1 .708-.708L6.5 10.293l6.646-6.647a.5.5 0 0 1 .708 0z"></path> </symbol> <symbol id="circle-half" viewBox="0 0 16 16"> <path d="M8 15A7 7 0 1 0 8 1v14zm0 1A8 8 0 1 1 8 0a8 8 0 0 1 0 16z"></path> </symbol> <symbol id="moon-stars-fill" viewBox="0 0 16 16"> <path d="M6 .278a.768.768 0 0 1 .08.858 7.208 7.208 0 0 0-.878 3.46c0 4.021 3.278 7.277 7.318 7.277.527 0 1.04-.055 1.533-.16a.787.787 0 0 1 .81.316.733.733 0 0 1-.031.893A8.349 8.349 0 0 1 8.344 16C3.734 16 0 12.286 0 7.71 0 4.266 2.114 1.312 5.124.06A.752.752 0 0 1 6 .278z"></path> <path d="M10.794 3.148a.217.217 0 0 1 .412 0l.387 1.162c.173.518.579.924 1.097 1.097l1.162.387a.217.217 0 0 1 0 .412l-1.162.387a1.734 1.734 0 0 0-1.097 1.097l-.387 1.162a.217.217 0 0 1-.412 0l-.387-1.162A1.734 1.734 0 0 0 9.31 6.593l-1.162-.387a.217.217 0 0 1 0-.412l1.162-.387a1.734 1.734 0 0 0 1.097-1.097l.387-1.162zM13.863.099a.145.145 0 0 1 .274 0l.258.774c.115.346.386.617.732.732l.774.258a.145.145 0 0 1 0 .274l-.774.258a1.156 1.156 0 0 0-.732.732l-.258.774a.145.145 0 0 1-.274 0l-.258-.774a1.156 1.156 0 0 0-.732-.732l-.774-.258a.145.145 0 0 1 0-.274l.774-.258c.346-.115.617-.386.732-.732L13.863.1z"></path> </symbol> <symbol id="sun-fill" viewBox="0 0 16 16"> <path d="M8 12a4 4 0 1 0 0-8 4 4 0 0 0 0 8zM8 0a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-1 0v-2A.5.5 0 0 1 8 0zm0 13a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-1 0v-2A.5.5 0 0 1 8 13zm8-5a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1 0-1h2a.5.5 0 0 1 .5.5zM3 8a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1 0-1h2A.5.5 0 0 1 3 8zm10.657-5.657a.5.5 0 0 1 0 .707l-1.414 1.415a.5.5 0 1 1-.707-.708l1.414-1.414a.5.5 0 0 1 .707 0zm-9.193 9.193a.5.5 0 0 1 0 .707L3.05 13.657a.5.5 0 0 1-.707-.707l1.414-1.414a.5.5 0 0 1 .707 0zm9.193 2.121a.5.5 0 0 1-.707 0l-1.414-1.414a.5.5 0 0 1 .707-.707l1.414 1.414a.5.5 0 0 1 0 .707zM4.464 4.465a.5.5 0 0 1-.707 0L2.343 3.05a.5.5 0 1 1 .707-.707l1.414 1.414a.5.5 0 0 1 0 .708z"></path> </symbol> </svg>
                 <div class="container"> 
                     <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top"> 
-                        <p class="col-md-4 mb-0 text-body-secondary">© 2025 Justin Rose</p>
+                        <p class="col-md-4 mb-0 footer-text-color">© 2025 Justin Rose</p>
                         <ul class="nav col-md-7 justify-content-end"> 
                             <li class="nav-item">
-                                <a href="tel:+17732009530" class="nav-link px-2 text-body-secondary">Phone: (773) 200-9530</a>
+                                <a href="tel:+17732009530" class="nav-link px-2 footer-text-color">Phone: (773) 200-9530</a>
                             </li> 
                             <li class="nav-item">
-                                <a href="mailto:rosejustin601@gmail.com" class="nav-link px-2 text-body-secondary">Email: rosejustin601@gmail.com</a>
+                                <a href="mailto:rosejustin601@gmail.com" class="nav-link px-2 footer-text-color">Email: rosejustin601@gmail.com</a>
                             </li> 
                             <li class="nav-item">
-                                <a href="emergency.html" class="nav-link px-2 text-body-secondary">Emergency Contact Info</a>
+                                <a href="emergency.html" class="nav-link px-2 footer-text-color">Emergency Contact Info</a>
                             </li> 
                             <li class="nav-item">
-                                <a href="static/other/site-map.pdf" class="nav-link px-2 text-body-secondary">Site Map</a>
+                                <a href="static/other/site-map.pdf" class="nav-link px-2 footer-text-color">Site Map</a>
                             </li>
                         </ul> 
                     </footer> 
