--- a/emergency.html
+++ b/emergency.html
@@ -19,7 +19,7 @@
                     <a href="index.html" class="nav-link nav-link-custom">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a href="static/other/Justin Rose CV.pdf" class="nav-link nav-link-custom">My CV</a>
+                    <a href="static/other/Justin-Rose-CV.pdf" class="nav-link nav-link-custom">My CV</a>
                 </li>
                 <li class="nav-item nav-link-custom">
                     <a href="socials.html" class="nav-link nav-link-custom">Social Media</a>
@@ -165,6 +165,8 @@
                                 <li>Sumatriptan             - 100  mg  - PRN</li>
                                 <li>Topiramate              - 25   mg  - AM & Bedtime</li>
                                 <li>Vitamin B Complex                  - AM</li>
+                                <li>Motrin                  - 600  mg  - PRN</li>
+                                <li>Melatonin               - 5    mg  - Bedtime</li>
                             </ul>
                         </div>
                     </div>
