--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
                     <a href="index.html" class="nav-link nav-link-custom">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a href="static/other/Justin Rose CV.pdf" class="nav-link nav-link-custom">My CV</a>
+                    <a href="static/other/Justin-Rose-CV.pdf" class="nav-link nav-link-custom">My CV</a>
                 </li>
                 <li class="nav-item nav-link-custom">
                     <a href="socials.html" class="nav-link nav-link-custom">Social Media</a>
