--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
         <nav>
             <ul class="nav nav-pills justify-content-center" id="myTabs" role="tablist" aria-orientation="horizontal">
                 <li class="nav-item">
-                    <a href="index.html" class="nav-link nav-active-custom">Home</a>
+                    <a href="index.html" class="nav-link nav-link-custom">Home</a>
                 </li>
                 <li class="nav-item">
                     <a href="static/other/Justin-Rose-CV.pdf" class="nav-link nav-link-custom">My CV</a>
@@ -25,7 +25,7 @@
                     <a href="socials.html" class="nav-link nav-link-custom">Social Media</a>
                 </li>
                 <li class="nav-item">
-                    <a href="about.html" class="nav-link nav-link-custom">About</a>
+                    <a href="about.html" class="nav-link nav-active-custom">About</a>
                 </li>
                 <li class="nav-item">
                     <a href="history.html" class="nav-link nav-link-custom">History</a>
@@ -56,7 +56,26 @@
         </header>
         <div id="main">
             <main>
-                
+                <div class="container-lg">
+                    <div class="row justify-content-center">
+                        <div class="col-md-7">
+                            <h1 class="text-center">About Me:</h1>
+                            <p class="text-center">
+                                Hi, my name is Justin Rose, currently a student at City Colleges Of Chicago studying Software Development. 
+                                While I don’t have much professional coding experience, I have been coding since the age of 12; with projects ranging from advanced art catalogs to Pokemon card catalog managers. 
+                                I am well versed in Python and familiar with flask. 
+                                My HTML and CSS with Bootstrap skills are not something to pass over as well. 
+                                I have experience with PostgreSQL databases as well.
+                            </p>
+                            <p class="text-center">
+                                Coding for me is not work as I do it for fun as well as work. 
+                                I am passionate of using automation to reduce workloads of menial tasks. 
+                                I am an excellent problem solver, and nothing gets me more excited than a problem to solve. 
+                                Currently I am focused on AI and big data for automation to unlock a speedier and reduced workload.
+                            </p>
+                        </div>
+                    </div>
+                </div>
             </main>
         </div>
         <div id="footer">
