--- a/hobbies.html
+++ b/hobbies.html
@@ -10,13 +10,13 @@
         <link rel="stylesheet" href="static/css/style-tab.css" media="screen and (min-width: 600px) and (max-width: 795px)">
         <link rel="stylesheet" href="static/css/style-phone.css" media="screen and (max-width: 599px)">
         <link rel="shortcut icon" href="static/img/favicon.jpg" type="image/jpeg">
-        <title>Presenting Justin Rose | Home</title>
+        <title>Presenting Justin Rose | Hobbies</title>
     </head>
     <body>
         <nav>
             <ul class="nav nav-pills justify-content-center" id="myTabs" role="tablist" aria-orientation="horizontal">
                 <li class="nav-item">
-                    <a href="index.html" class="nav-link nav-active-custom">Home</a>
+                    <a href="index.html" class="nav-link nav-link-custom">Home</a>
                 </li>
                 <li class="nav-item">
                     <a href="static/other/Justin-Rose-CV.pdf" class="nav-link nav-link-custom">My CV</a>
@@ -28,7 +28,7 @@
                     <a href="about.html" class="nav-link nav-link-custom">About</a>
                 </li>
                 <li class="nav-item">
-                    <a href="hobbies.html" class="nav-link nav-link-custom">Hobbies</a>
+                    <a href="hobbies.html" class="nav-link nav-active-custom">Hobbies</a>
                 </li>
                 <li class="nav-item">
                     <a href="contact.html" class="nav-link nav-link-custom">Contact</a>
@@ -40,11 +40,11 @@
                 <div class="d-flex flex-column align-items-center justify-content-center">
                     <div class="col-md-4 justify-content-center text-center">
                             <img src="static/img/Justin-Rose-image.JPG" alt="Picture of Justin Rose in a button up shirt and tie" class="img-fluid rounded-circle mb-3">
-                            <h1 class="h1 heading-text-color regular-text-color">Justin Rose</h1>
+                            <h1 class="h1 heading-text-color">Justin Rose</h1>
                             <p class="h-quote">
                                 "Honesty Is The Best Policy" <br>~<br>
                             </p>
-                            <p class="h-quote-author regular-text-color">
+                            <p class="h-quote-author">
                                 Benjamin Franklin
                             </p>
                     </div>
@@ -53,7 +53,36 @@
         </header>
         <div id="main">
             <main>
-                <!-- Main Content -->
+                <div class="container-md">
+                    <div class="row justify-content-center">
+                        <div class="col-md-7">
+                            <h3>Hobbies: </h3>
+                            <p>I have many hobbies, some are related to my field while others ... not so much.</p>
+                            <h4>Mountain Biking</h4>
+                            <p>
+                                I love mountain biking, it is an extreme sport that is very fun and healthy. 
+                                mountain biking is a great source of exercise. Although it is a very good source of fun 
+                                and exercise, it can be very dangerous
+                            </p>
+                            <figure>
+                                <img src="static/img/mountain-biker.jpg" alt="Mountain biker riding down a mountain">
+                                <figcaption>Mountain Biking</figcaption>
+                            </figure>
+                            <h4>Gaming</h4>
+                            <p>
+                                Gaming is a very common passtime these days, and I am hapy to call myself a gamer.
+                                My newest game i picked up is the new indie game Clair-Obscur: Expedition 33. It is 
+                                a action Turn based stratagy RPG that fixes the problems with traditional t.b.s. rpg's.
+                                other games i play are pokemon, remnant, final fantasy, no man's sky, and minecraft.
+                            </p>
+                            <h4>Coding</h4>
+                            <p>
+                                Not only is coding a potential source of income for me, it is a source of entertainement. 
+                                The excitement of a peice of code working is a great feeling.
+                            </p>
+                        </div>
+                    </div>
+                </div>
             </main>
         </div>
         <div id="footer">
@@ -80,7 +109,7 @@
                 </div>
             </footer>
         </div>
-        <script src="static/js/nav-oriet.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+        <script src="static/js/nav-oriet.js"></script>
     </body>
 </html>
