--- a/emergency.html
+++ b/emergency.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" href="static/css/style-tab.css" media="screen and (min-width: 600px) and (max-width: 795px)">
         <link rel="stylesheet" href="static/css/style-phone.css" media="screen and (max-width: 599px)">
         <link rel="shortcut icon" href="static/img/favicon.jpg" type="image/jpeg">
-        <title>Presenting Justin Rose | I.C.E.</title>
+        <title>Presenting Justin Rose | In Case Of Emergency</title>
     </head>
     <body>
         <nav>
@@ -26,9 +26,6 @@
                 </li>
                 <li class="nav-item">
                     <a href="about.html" class="nav-link nav-link-custom">About</a>
-                </li>
-                <li class="nav-item">
-                    <a href="history.html" class="nav-link nav-link-custom">History</a>
                 </li>
                 <li class="nav-item">
                     <a href="hobbies.html" class="nav-link nav-link-custom">Hobbies</a>
