--- a/hobbies.html
+++ b/hobbies.html
@@ -55,7 +55,8 @@
             <main>
                 <div class="container-md">
                     <div class="row justify-content-center">
-                        <div class="col-md-7">
+                        <div class="col-sm-7 text-center">
+                            <hr>
                             <h3>Hobbies: </h3>
                             <p>I have many hobbies, some are related to my field while others ... not so much.</p>
                             <h4>Mountain Biking</h4>
