--- a/hobbies.html
+++ b/hobbies.html
@@ -11,6 +11,7 @@
         <link rel="stylesheet" href="static/css/style-phone.css" media="screen and (max-width: 599px)">
         <link rel="shortcut icon" href="static/img/favicon.jpg" type="image/jpeg">
         <title>Presenting Justin Rose | Hobbies</title>
+        <meta name="description" content="The hobbies of Justin Rose!">
     </head>
     <body>
         <nav>
