--- a/about.html
+++ b/about.html
@@ -10,7 +10,8 @@
         <link rel="stylesheet" href="static/css/style-tab.css" media="screen and (min-width: 600px) and (max-width: 795px)">
         <link rel="stylesheet" href="static/css/style-phone.css" media="screen and (max-width: 599px)">
         <link rel="shortcut icon" href="static/img/favicon.jpg" type="image/jpeg">
-        <title>Presenting Justin Rose | About</title>
+        <title>Presenting Justin Rose | About Me</title>
+        <meta name="description" content="Passionate Beginning Developer Justin Rose Talks About Himself">
     </head>
     <body>
         <nav>
