--- a/contact.html
+++ b/contact.html
@@ -11,6 +11,7 @@
         <link rel="stylesheet" href="static/css/style-phone.css" media="screen and (max-width: 599px)">
         <link rel="shortcut icon" href="static/img/favicon.jpg" type="image/jpeg">
         <title>Presenting Justin Rose | Contact</title>
+        <meta name="description" content="Get In Touch! Email: rosejustin601@gmail.com Phone: +17732009530">
     </head>
     <body>
         <nav>
