--- a/emergency.html
+++ b/emergency.html
@@ -11,6 +11,7 @@
         <link rel="stylesheet" href="static/css/style-phone.css" media="screen and (max-width: 599px)">
         <link rel="shortcut icon" href="static/img/favicon.jpg" type="image/jpeg">
         <title>Presenting Justin Rose | In Case Of Emergency</title>
+        <meta name="description" content="Read in case of an emergency revolving around justin rose">
     </head>
     <body>
         <nav>
