--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <link rel="stylesheet" href="static/css/style-phone.css" media="screen and (max-width: 599px)">
         <link rel="shortcut icon" href="static/img/favicon.jpg" type="image/jpeg">
         <title>Presenting Justin Rose | Home</title>
+        <meta name="description" content="Here for those looking for more information on Justin Rose">
     </head>
     <body>
         <nav>
