--- a/socials.html
+++ b/socials.html
@@ -11,6 +11,7 @@
         <link rel="stylesheet" href="static/css/style-phone.css" media="screen and (max-width: 599px)">
         <link rel="shortcut icon" href="static/img/favicon.jpg" type="image/jpeg">
         <title>Presenting Justin Rose | Social Media</title>
+        <meta name="description" content="Find me on my social medias!">
     </head>
     <body>
         <nav>
