phone link css cleanup

--- a/about.html
+++ b/about.html
@@ -84,7 +84,8 @@
                         <p class="col-md-4 mb-0 footer-text-color">© 2025 Justin Rose</p>
                         <ul class="nav col-md-7 justify-content-end"> 
                             <li class="nav-item">
-                                <a href="tel:+17732009530" class="nav-link px-2 footer-text-color">Phone: (773) 200-9530</a>
+                                <a href="tel:+17732009530" class="phone-link nav-link px-2 footer-text-color">Phone: (773) 200-9530</a>
+                                <p class="phone-display nav-link px-2 footer-text-color">Phone: (773) 200-9530</p>
                             </li> 
                             <li class="nav-item">
                                 <a href="mailto:rosejustin601@gmail.com" class="nav-link px-2 footer-text-color">Email: rosejustin601@gmail.com</a>
