--- a/emergency.html
+++ b/emergency.html
@@ -157,7 +157,7 @@
                                 <li>Famotidine              - 40   mg  - AM</li>
                                 <li>Hydrochlorothiazide     - 12.5 mg  - AM</li>
                                 <li>Losartan                - 20   mg  - AM</li>
-                                <li>Metoprolol Succinate ER - 100  mg  - AM</li>
+                                <li>Metoprolol Succinate XR - 100  mg  - AM</li>
                                 <li>Olanzapine              - 12.5 mg  - Bedtime</li>
                                 <li>Oxcarbazepine           - 600  mg  - AM & Bedtime</li>
                                 <li>Sumatriptan             - 100  mg  - PRN</li>
@@ -165,6 +165,8 @@
                                 <li>Vitamin B Complex                  - AM</li>
                                 <li>Motrin                  - 600  mg  - PRN</li>
                                 <li>Melatonin               - 5    mg  - Bedtime</li>
+                                <li>Metformin XR            - 10   mg  - Bedtime</li>
+                                <li>Trazadone               - 125  mg  - Bedtime</li>
                             </ul>
                         </div>
                     </div>
